[package]
name = "ckb-wallet"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Wallet SDK for Nervos CKB"
homepage = "https://github.com/TheWaWaR/ckb-wallet"
repository = "https://github.com/TheWaWaR/ckb-wallet"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
secp256k1 = { version = "0.20", features = ["recovery"] }
faster-hex = "0.6"
aes-ctr = "0.6.0"
scrypt = "0.2.0"
rand = "0.7.3"
tiny-keccak = "1.4"
uuid = { version = "0.7.4", features = ["v4"] }
chrono = "0.4"
failure = "0.1.5"

ckb-types = "=0.101.4"
ckb-hash = "=0.101.4"
ckb-crypto = { version = "=0.101.4", features = ["secp"] }

ckb-sdk = { git = "https://github.com/TheWaWaR/ckb-sdk.git" }